Etch-a-Sketch.css
.cont{
  position:absolute;
  top:0;
  left:0;
  width:100%;
  height:100%;
}
button {
  left: 0px;
  width: 100px;
  height: 30px;
}

button:hover {
  cursor: hand;
}

input {
  top: 75px;
  left: 0;
}

label {
  left: 0;
  top: 50px;
  color: white;
}

